--- a/schrodingerhydrogen2d_763/index.html
+++ b/schrodingerhydrogen2d_763/index.html
@@ -53,14 +53,9 @@ img.emoji {
 <link rel="shortlink" href="https://unitnormal.github.io/?p=241">
 <link rel="alternate" type="application/json+oembed" href="https://unitnormal.github.io/wp-json/oembed/1.0/embed?url=http%3A%2F%2Fhttps://unitnormal.github.io%2Fschrodingerhydrogen2d_763%2F">
 <link rel="alternate" type="text/xml+oembed" href="https://unitnormal.github.io/wp-json/oembed/1.0/embed?url=http%3A%2F%2Fhttps://unitnormal.github.io%2Fschrodingerhydrogen2d_763%2F&#038;format=xml">
-		<style id="twentyseventeen-custom-header-styles" type="text/css">.site-title,
-		.site-description {
-			position: absolute;
-			clip: rect(1px, 1px, 1px, 1px);
-		}</style>
-		</head>
+</head>
 
-<body class="attachment attachment-template-default single single-attachment postid-241 attachmentid-241 attachment-png wp-embed-responsive has-header-image title-tagline-hidden colors-dark">
+<body class="attachment attachment-template-default single single-attachment postid-241 attachmentid-241 attachment-png wp-embed-responsive has-header-image colors-dark">
 <div id="page" class="site">
 	<a class="skip-link screen-reader-text" href="#content">Skip to content</a>
 
